# actix

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: post.rs
migration/src/: lib.rs  m20241219_174638_create_user_table.rs  m20241222_003656_create_post_table.rs
src/: main.rs
src/config/: app_state.rs  database.rs  mod.rs
src/handlers/: app_data_handlers.rs  json_handlers.rs  mod.rs  path_handlers.rs  query_handlers.rs  sql_handlers.rs  static_handlers.rs
src/routes/: app_data_routes.rs  json_routes.rs  mod.rs  path_routes.rs  query_routes.rs  sql_routes.rs  static_routes.rs
