[package]
name = "actix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "migration"
]

[dependencies]
migration = { path = "migration" }
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
